header sticks to the top

--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -1,5 +1,11 @@
 @import "../../assets/styles/globals";
 
+// Helper class to make header sticky
+._stickyHeader {
+    position: sticky;
+    top: 0;
+}
+
 .header{
     padding-right: rem(72);
     padding-left: rem(72);
