--- a/src/components/MainContent/MainContent.module.scss
+++ b/src/components/MainContent/MainContent.module.scss
@@ -12,6 +12,11 @@
     background-color: var(--color-blue-1);
     color: var(--color-white-1);
 
+    @include breakpoint-up(desktop) {
+        padding-right: rem(300);
+        padding-left: rem(300);
+    }
+
     & button {
         color: inherit;
         font-family: inherit;
@@ -159,6 +164,11 @@
     padding-right: rem(72);
     padding-left: rem(72);
 
+    @include breakpoint-up(desktop) {
+        padding-right: rem(300);
+        padding-left: rem(300);
+    }
+
     &__products {
         display: grid;
         padding-top: rem(24);
@@ -166,5 +176,9 @@
         grid-template-columns: repeat(5, 1fr);
         grid-column-gap: rem(36);
         grid-row-gap: rem(72);
+
+        @include breakpoint-up(desktop) {
+            grid-template-columns: repeat(6, 1fr);
+        }
     }
 }
