search on button click added, modal window styles changed

--- a/src/assets/styles/_globals.scss
+++ b/src/assets/styles/_globals.scss
@@ -3,7 +3,7 @@
     @return calc($pixels / $context) + 0rem;
 }
 
-// 1920px screen width
+// Content adaptation for 1920px screen width
 $breakpoints-up: ("desktop": "120em");
 @mixin breakpoint-up ($size) {
     @media (min-width: map-get($breakpoints-up, $size)) {
